[gd_scene format=3 uid="uid://wsee2urpo12e"]

[ext_resource type="Script" uid="uid://cri7ubx17qqfg" path="res://Scripts/skeleton.gd" id="1_81u3t"]
[ext_resource type="Texture2D" uid="uid://b6x5cthvhvce4" path="res://Assets/Images/Enemies/Skeleton.png" id="2_81u3t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vd5x3"]
atlas = ExtResource("2_81u3t")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pegji"]
atlas = ExtResource("2_81u3t")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5abox"]
atlas = ExtResource("2_81u3t")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8sxu"]
atlas = ExtResource("2_81u3t")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks230"]
atlas = ExtResource("2_81u3t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shq1q"]
atlas = ExtResource("2_81u3t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbfmp"]
atlas = ExtResource("2_81u3t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1wii"]
atlas = ExtResource("2_81u3t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw4xn"]
atlas = ExtResource("2_81u3t")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clg8n"]
atlas = ExtResource("2_81u3t")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxjam"]
atlas = ExtResource("2_81u3t")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4moy"]
atlas = ExtResource("2_81u3t")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwqs"]
atlas = ExtResource("2_81u3t")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6q7w"]
atlas = ExtResource("2_81u3t")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_anwrq"]
atlas = ExtResource("2_81u3t")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yfbv"]
atlas = ExtResource("2_81u3t")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcsoq"]
atlas = ExtResource("2_81u3t")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1qk"]
atlas = ExtResource("2_81u3t")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlyal"]
atlas = ExtResource("2_81u3t")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uebny"]
atlas = ExtResource("2_81u3t")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf6qe"]
atlas = ExtResource("2_81u3t")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbdh"]
atlas = ExtResource("2_81u3t")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_di62f"]
atlas = ExtResource("2_81u3t")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjh88"]
atlas = ExtResource("2_81u3t")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfcpp"]
atlas = ExtResource("2_81u3t")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oelfx"]
atlas = ExtResource("2_81u3t")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1o88"]
atlas = ExtResource("2_81u3t")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhll6"]
atlas = ExtResource("2_81u3t")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs872"]
atlas = ExtResource("2_81u3t")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_si4ap"]
atlas = ExtResource("2_81u3t")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7hgc"]
atlas = ExtResource("2_81u3t")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06y4e"]
atlas = ExtResource("2_81u3t")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqvih"]
atlas = ExtResource("2_81u3t")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjfp6"]
atlas = ExtResource("2_81u3t")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6yni"]
atlas = ExtResource("2_81u3t")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbn8f"]
atlas = ExtResource("2_81u3t")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trmo5"]
atlas = ExtResource("2_81u3t")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6aie"]
atlas = ExtResource("2_81u3t")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3huv"]
atlas = ExtResource("2_81u3t")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytwjw"]
atlas = ExtResource("2_81u3t")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_llvkk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd5x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pegji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5abox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8sxu")
}],
"loop": false,
"name": &"die",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks230")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shq1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbfmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1wii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw4xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clg8n")
}],
"loop": true,
"name": &"idle_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxjam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4moy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6q7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anwrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yfbv")
}],
"loop": true,
"name": &"idle_right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlyal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uebny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf6qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbdh")
}],
"loop": true,
"name": &"idle_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_di62f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjh88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfcpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oelfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1o88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhll6")
}],
"loop": true,
"name": &"run_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs872")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si4ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7hgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06y4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqvih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjfp6")
}],
"loop": true,
"name": &"run_right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6yni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbn8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trmo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6aie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3huv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytwjw")
}],
"loop": true,
"name": &"run_up",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_swwnm"]
radius = 7.994198
height = 21.610682

[sub_resource type="CircleShape2D" id="CircleShape2D_swwnm"]
radius = 84.642296

[sub_resource type="CircleShape2D" id="CircleShape2D_aiwxb"]
radius = 14.0057125

[node name="Skeleton" type="CharacterBody2D" unique_id=1412222983 groups=["Enemy"]]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_81u3t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=687889871 groups=["Enemy"]]
sprite_frames = SubResource("SpriteFrames_llvkk")
animation = &"die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1738875638]
position = Vector2(0.4, 0.4)
rotation = -1.5778041
shape = SubResource("CapsuleShape2D_swwnm")

[node name="Up" type="RayCast2D" parent="." unique_id=668257693]
visible = false
target_position = Vector2(0, -23.599998)

[node name="Down" type="RayCast2D" parent="." unique_id=1758770486]
visible = false
target_position = Vector2(-0.79999995, 21.199999)

[node name="Left" type="RayCast2D" parent="." unique_id=387565048]
visible = false
target_position = Vector2(-23.599998, 0.39999998)

[node name="Right" type="RayCast2D" parent="." unique_id=1509116816]
visible = false
target_position = Vector2(25.199999, 0)

[node name="Timer" type="Timer" parent="." unique_id=1537486922]
wait_time = 1.3079999999999998

[node name="Area2D" type="Area2D" parent="." unique_id=411791979]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1335143664]
shape = SubResource("CircleShape2D_swwnm")

[node name="hitbox" type="Area2D" parent="." unique_id=1215921922]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" unique_id=1362459708]
visible = false
position = Vector2(0, 0.79999995)
shape = SubResource("CircleShape2D_aiwxb")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
